--- a/data/README
+++ b/data/README
@@ -1,3 +1,3 @@
-- dmel_data.txt: Raw data file with missing values (0's). Each column represents individual nuclei. The first 3 rows are (x,y,z)-coordinates.
+- dmel_data.txt: Raw data file with missing values (0's). Each column represents individual nucleus. The first 3 rows are (x,y,z)-coordinates. Starting from the 4th row, the gene expressions are in blocks of 6 rows for 6 timepoint measurements.
 - gene_names.txt: names of 95 mRNA and 4 proteins (*P)
 - indices_complete.txt: 
