added a notebook for mutant simulations

--- a/notebooks/1. Data Preparation.ipynb
+++ b/notebooks/1. Data Preparation.ipynb
@@ -5,8 +5,7 @@
    "id": "closing-liberty",
    "metadata": {},
    "source": [
-    "# Data preparation\n",
-    "This notebook goes through "
+    "# Data preparation"
    ]
   },
   {
@@ -112,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_all = np.loadtxt('../data/data_complete_tf_new.txt')\n",
+    "data_all = np.loadtxt('../data/data_complete.txt')\n",
     "all_bin = np.vsplit(data_all, 6)\n",
     "all_init = np.vstack([all_bin[i] for i in range(5)])\n",
     "all_diff = np.vstack([all_bin[i+1]-all_bin[i] for i in range(5)])\n",
