--- a/notebooks/2. Inference - erf-LAD.ipynb
+++ b/notebooks/2. Inference - erf-LAD.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_all = np.loadtxt('../data/data_complete_tf_new.txt')\n",
+    "data_all = np.loadtxt('../data/data_complete_tf.txt')\n",
     "\n",
     "all_bin = np.vsplit(data_all, 6)\n",
     "all_init = np.vstack([all_bin[i] for i in range(5)])\n",
