--- a/notebooks/1. Data Preparation.ipynb
+++ b/notebooks/1. Data Preparation.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "# tr_data = np.vstack([gene_exp[:, i::6] for i in range(6)])\n",
     "# data_complete = imputation(tr_data, comp_ind)\n",
-    "# np.savetxt('data/data_complete_tf_new.txt', data_complete)"
+    "# np.savetxt('data/data_complete.txt', data_complete)"
    ]
   },
   {
@@ -101,7 +101,8 @@
    "id": "neural-general",
    "metadata": {},
    "source": [
-    "## Make .npy files"
+    "## Make .npy files\n",
+    "This section creates .npy files necessary to carry out the computations included in /HPC/"
    ]
   },
   {
