--- a/notebooks/7. Network perturbation.ipynb
+++ b/notebooks/7. Network perturbation.ipynb
@@ -6,7 +6,168 @@
    "id": "reduced-entrepreneur",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pickle\n",
+    "import random\n",
+    "from sklearn.linear_model import OrthogonalMatchingPursuit, OrthogonalMatchingPursuitCV\n",
+    "import bz2\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    "import seaborn as sns\n",
+    "\n",
+    "matplotlib.rcParams.update({'font.size':10})\n",
+    "matplotlib.rcParams.update({'font.family':'Times New Roman'})\n",
+    "matplotlib.rcParams['legend.frameon'] = False\n",
+    "plt.rcParams.update({\"text.usetex\": True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "black-interface",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_quad(X):\n",
+    "    quad = np.zeros((int(X.shape[0]), int(X.shape[1] + (X.shape[1]*(X.shape[1]-1))/2)))\n",
+    "    quad[:, :X.shape[1]] = np.copy(X)\n",
+    "    col = 99\n",
+    "    for i in range(X.shape[1]-1):\n",
+    "        for j in range(i+1, X.shape[1]):\n",
+    "            quad[:,col] = (X[:,i]*X[:,j])\n",
+    "            col += 1\n",
+    "    return quad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "stretch-intermediate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH + 'LAD_(99,99)_tvt_e8.pkl', 'rb') as f:\n",
+    "    LAD = pickle.load(f)\n",
+    "    \n",
+    "w = LAD['w'][-1]\n",
+    "bias = LAD['bias'][-1]\n",
+    "\n",
+    "data = np.loadtxt('../data_complete_tf_new.txt')\n",
+    "init = np.vsplit(data, 6)[0]\n",
+    "\n",
+    "quad = make_quad(init)\n",
+    "f = init + bias + quad.dot(w)\n",
+    "f[f<0] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "entitled-logging",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = np.loadtxt('../dmel_data.txt').T  # transpose the data so that the shape is 6078 cells x (3+6*99) columns\n",
+    "xyz = raw_data[:,:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "controlled-madrid",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perturb the effect of gene 22 (DOC2) on gene 91 (trn).\n",
+    "\n",
+    "source = 22\n",
+    "target = 91\n",
+    "\n",
+    "if w[source,target] > 0:\n",
+    "    print('the source gene has positive effect on the target gene')\n",
+    "elif w[source,target] < 0:\n",
+    "    print('the source gene has negative effect on the target gene')\n",
+    "    \n",
+    "lower = np.percentile(init[:,source][init[:,source] > 0], 30)\n",
+    "higher = np.percentile(init[:,source][init[:,source] > 0], 80)\n",
+    "\n",
+    "new_f = np.copy(f)\n",
+    "\n",
+    "new_w = np.copy(w)\n",
+    "new_w[source, target] = 1.15*new_w[source, target]\n",
+    "\n",
+    "pred_f = init + bias + quad.dot(new_w)\n",
+    "pred_f[pred_f<0] = 0\n",
+    "\n",
+    "current_palette=[sns.color_palette('Set3')[8], sns.color_palette('Paired')[6],\n",
+    "                 sns.color_palette('Paired')[7], sns.color_palette('Paired')[5]]\n",
+    "\n",
+    "fig = plt.figure(figsize=(5,2), dpi=600)\n",
+    "fig.subplots_adjust(wspace=0.4)\n",
+    "ax = fig.add_subplot(1,2,1)\n",
+    "ax.axis('off')\n",
+    "xy=ax.scatter(xyz[:,0][xyz[:,1] > 0], xyz[:,2][xyz[:,1] > 0], c=init[:,source][xyz[:,1] > 0], s=1.5, cmap=plt.cm.OrRd)\n",
+    "ax.scatter(xyz[:,0][xyz[:,1] < 0], 190-xyz[:,2][xyz[:,1] < 0], c=init[:,source][xyz[:,1] < 0], s=1.5, cmap=plt.cm.OrRd)\n",
+    "ax.text(-245,95, 'Anterior', rotation=90, va='center')\n",
+    "ax.text(0,92, 'Dorsal', va='center', ha='center')\n",
+    "ax.text(185,100, 'Posterior', rotation=-90, va='center')\n",
+    "ax.text(0,280, 'Ventral', ha='center')\n",
+    "ax.text(0,-115, 'Ventral', ha='center')\n",
+    "ax.text(-220,265, '(A)')\n",
+    "cbar_ax = fig.add_axes([0.48, 0.25, 0.02, 0.5])\n",
+    "cbar=fig.colorbar(xy, cax=cbar_ax, ticks=[0,0.6], orientation='vertical')\n",
+    "# fig.colorbar(xy, orientation='horizontal')\n",
+    "ax = fig.add_subplot(1,2,2)\n",
+    "ax.axis('off')\n",
+    "ax.scatter(xyz[:,0][(init[:,source] == 0) & (xyz[:,1] > 0)],\n",
+    "           xyz[:,2][(init[:,source] == 0) & (xyz[:,1] > 0)],\n",
+    "           color=current_palette[0], alpha=1, lw=1, s=2, label='zero expression')\n",
+    "ax.scatter(xyz[:,0][(init[:,source] == 0) & (xyz[:,1] < 0)],\n",
+    "           190-xyz[:,2][(init[:,source] == 0) & (xyz[:,1] < 0)],\n",
+    "           color=current_palette[0], alpha=1, lw=1, s=2)\n",
+    "ax.scatter(xyz[:,0][(init[:,source] <= lower) & (init[:,source] > 0) & (xyz[:,1] > 0)],\n",
+    "           xyz[:,2][(init[:,source] <= lower) & (init[:,source] > 0) & (xyz[:,1] > 0)],\n",
+    "           color=current_palette[1], alpha=1, lw=1, s=2, label='low expression')\n",
+    "ax.scatter(xyz[:,0][(init[:,source] <= lower) & (xyz[:,1] < 0)],\n",
+    "           190-xyz[:,2][(init[:,source] <= lower) & (xyz[:,1] < 0)],\n",
+    "           color=current_palette[1], alpha=1, lw=1, s=2)\n",
+    "ax.scatter(xyz[:,0][(init[:,source] > lower) & (init[:,source] < higher) & (xyz[:,1] > 0)],\n",
+    "           xyz[:,2][(init[:,source] > lower) & (init[:,source] < higher) & (xyz[:,1] > 0)],\n",
+    "           color=current_palette[2], alpha=1, lw=1, s=2, label='mid expression')\n",
+    "ax.scatter(xyz[:,0][(init[:,source] > lower) & (init[:,source] < higher) & (xyz[:,1] < 0)],\n",
+    "           190-xyz[:,2][(init[:,source] > lower) & (init[:,source] < higher) & (xyz[:,1] < 0)],\n",
+    "           color=current_palette[2], alpha=1, lw=1, s=2)\n",
+    "ax.scatter(xyz[:,0][(init[:,source] >= higher) & (xyz[:,1] > 0)],\n",
+    "           xyz[:,2][(init[:,source] >= higher) & (xyz[:,1] > 0)],\n",
+    "           color=current_palette[3], alpha=1, lw=1, s=2, label='high expression')\n",
+    "ax.scatter(xyz[:,0][(init[:,source] >= higher) & (xyz[:,1] < 0)],\n",
+    "           190-xyz[:,2][(init[:,source] >= higher) & (xyz[:,1] < 0)],\n",
+    "           color=current_palette[3], alpha=1, lw=1, s=2)\n",
+    "ax.text(-220,265, '(B)')\n",
+    "plt.legend(bbox_to_anchor=(1,0.85))\n",
+    "plt.savefig(figures+'22to91emb.png', bbox_inches='tight', facecolor='white', transparent=False)\n",
+    "plt.show()\n",
+    "\n",
+    "nom = np.mean(np.abs(new_f[:,target][init[:,source] >= higher] - pred_f[:,target][init[:,source] >= higher]))\n",
+    "error = np.abs(new_f[:,target] - pred_f[:,target])/nom\n",
+    "plt.figure(figsize=(2,2), dpi=600)\n",
+    "sns.violinplot(x=np.ones(len(error[(init[:,source] > 0) & (init[:,source] <= lower)])),\n",
+    "               y=error[(init[:,source] > 0) & (init[:,source] <= lower)], order=[1,2,3],\n",
+    "               width=0.6, palette=current_palette[1:], saturation=1)\n",
+    "sns.violinplot(x=2*np.ones(len(error[(init[:,source] > lower) & (init[:,source] < higher)])),\n",
+    "               y=error[(init[:,source] > lower) & (init[:,source] < higher)], order=[1,2,3],\n",
+    "               width=0.6, palette=current_palette[1:], saturation=1)\n",
+    "sns.violinplot(x=3*np.ones(len(error[init[:,source] >= higher])),\n",
+    "               y=error[init[:,source] >= higher], order=[1,2,3],\n",
+    "               width=0.6, palette=current_palette[1:], saturation=1)\n",
+    "plt.xticks(ticks=[0,1,2], labels=[r'cell$_{\\rm{low}}$', r'cell$_{\\rm{mid}}$', r'cell$_{\\rm{high}}$'])\n",
+    "plt.xlabel('cell groups')\n",
+    "plt.ylabel('normalized difference')\n",
+    "# plt.show()\n",
+    "plt.savefig(figures+'22to91normdiff.png', bbox_inches='tight')"
+   ]
   }
  ],
  "metadata": {
