--- a/notebooks/7. Network perturbation.ipynb
+++ b/notebooks/7. Network perturbation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "improving-abuse",
+   "metadata": {},
+   "source": [
+    "# Network perturbation simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "reduced-entrepreneur",
@@ -24,9 +32,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "handmade-ability",
+   "metadata": {},
+   "source": [
+    "## Load pickles and data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "black-interface",
+   "id": "synthetic-voluntary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +54,8 @@
     "        for j in range(i+1, X.shape[1]):\n",
     "            quad[:,col] = (X[:,i]*X[:,j])\n",
     "            col += 1\n",
-    "    return quad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "stretch-intermediate",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return quad\n",
+    "\n",
     "with open(PATH + 'LAD_(99,99)_tvt_e8.pkl', 'rb') as f:\n",
     "    LAD = pickle.load(f)\n",
     "    \n",
@@ -59,24 +67,24 @@
     "\n",
     "quad = make_quad(init)\n",
     "f = init + bias + quad.dot(w)\n",
-    "f[f<0] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "entitled-logging",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "f[f<0] = 0\n",
+    "\n",
     "raw_data = np.loadtxt('../dmel_data.txt').T  # transpose the data so that the shape is 6078 cells x (3+6*99) columns\n",
     "xyz = raw_data[:,:3]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "homeless-bryan",
+   "metadata": {},
+   "source": [
+    "## Perturbation simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "controlled-madrid",
+   "id": "immune-thailand",
    "metadata": {},
    "outputs": [],
    "source": [
