added example pickles

--- a/notebooks/7. Network perturbation.ipynb
+++ b/notebooks/7. Network perturbation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "improving-abuse",
+   "id": "dress-display",
    "metadata": {},
    "source": [
     "# Network perturbation simulation"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handmade-ability",
+   "id": "charming-longer",
    "metadata": {},
    "source": [
     "## Load pickles and data"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "synthetic-voluntary",
+   "id": "sophisticated-yeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-bryan",
+   "id": "limited-limit",
    "metadata": {},
    "source": [
     "## Perturbation simulation"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immune-thailand",
+   "id": "ordinary-retirement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
     "           color=current_palette[3], alpha=1, lw=1, s=2)\n",
     "ax.text(-220,265, '(B)')\n",
     "plt.legend(bbox_to_anchor=(1,0.85))\n",
-    "plt.savefig(figures+'22to91emb.png', bbox_inches='tight', facecolor='white', transparent=False)\n",
+    "# plt.savefig(figures+'22to91emb.png', bbox_inches='tight', facecolor='white', transparent=False)\n",
     "plt.show()\n",
     "\n",
     "nom = np.mean(np.abs(new_f[:,target][init[:,source] >= higher] - pred_f[:,target][init[:,source] >= higher]))\n",
@@ -173,8 +173,8 @@
     "plt.xticks(ticks=[0,1,2], labels=[r'cell$_{\\rm{low}}$', r'cell$_{\\rm{mid}}$', r'cell$_{\\rm{high}}$'])\n",
     "plt.xlabel('cell groups')\n",
     "plt.ylabel('normalized difference')\n",
-    "# plt.show()\n",
-    "plt.savefig(figures+'22to91normdiff.png', bbox_inches='tight')"
+    "plt.show()\n",
+    "# plt.savefig(figures+'22to91normdiff.png', bbox_inches='tight')"
    ]
   }
  ],
