--- a/notebooks/7. Network perturbation.ipynb
+++ b/notebooks/7. Network perturbation.ipynb
@@ -28,7 +28,9 @@
     "matplotlib.rcParams.update({'font.size':10})\n",
     "matplotlib.rcParams.update({'font.family':'Times New Roman'})\n",
     "matplotlib.rcParams['legend.frameon'] = False\n",
-    "plt.rcParams.update({\"text.usetex\": True})"
+    "plt.rcParams.update({\"text.usetex\": True})\n",
+    "\n",
+    "PATH = '../pickles/'"
    ]
   },
   {
@@ -56,13 +58,13 @@
     "            col += 1\n",
     "    return quad\n",
     "\n",
-    "with open(PATH + 'LAD_(99,99)_tvt_e8.pkl', 'rb') as f:\n",
+    "with open(PATH + 'LAD_(99,99)_tvt.pkl', 'rb') as f:\n",
     "    LAD = pickle.load(f)\n",
     "    \n",
     "w = LAD['w'][-1]\n",
     "bias = LAD['bias'][-1]\n",
     "\n",
-    "data = np.loadtxt('../data_complete_tf_new.txt')\n",
+    "data = np.loadtxt('../data_complete.txt')\n",
     "init = np.vsplit(data, 6)[0]\n",
     "\n",
     "quad = make_quad(init)\n",
